--- a/templates/delete_account.html
+++ b/templates/delete_account.html
@@ -4,7 +4,16 @@
 <div class="container mt-5 col-md-5 mx-auto">
   <h3 class="text-danger">Delete Account</h3>
   <p>This action is irreversible. Are you sure you want to delete your account?</p>
-
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+          {% for category, message in messages %}
+            <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+              {{ message }}
+              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+          {% endfor %}
+        {% endif %}
+      {% endwith %}
   <form id="deleteForm" method="POST">
     {{ form.hidden_tag() }}
 
