--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -41,6 +41,11 @@
         </a>
       </div>
       <div class="col-md-6 col-lg-4">
+  <a href="{{ url_for('admin_ids') }}" class="btn btn-outline-warning w-100">
+    <i class="bi bi-shield-exclamation me-1"></i> Intrusion Detection Logs
+  </a>
+</div>
+      <div class="col-md-6 col-lg-4">
         <a href="{{ url_for('logout') }}" class="btn btn-outline-dark w-100">
           <i class="bi bi-box-arrow-right me-1"></i> Logout
         </a>
